# mobile-use

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
docs/: command-reference.md  flutter-mobile-use-guide.md
docs/plans/: 2026-03-05-ios-support-design.md  2026-03-05-ios-support-plan.md  2026-03-09-ios-native-test-app.md
docs/superpowers/plans/: 2026-03-11-ios-real-device-support.md
docs/superpowers/specs/: 2026-03-11-ios-real-device-support-design.md
homebrew/: mobile-use.rb
src/: main.rs
src/cli/: mod.rs  output.rs  parser.rs
src/commands/: connect.rs
src/core/: error.rs  mod.rs  session.rs  types.rs
src/daemon/: client.rs  mod.rs  protocol.rs  server.rs  session_manager.rs
src/platform/: mod.rs
src/platform/android/: adb.rs  gradle.rs  mod.rs  uiautomator.rs
src/platform/flutter/: mod.rs  process_manager.rs  semantics.rs  vm_service.rs
src/platform/ios/: discovery.rs  elements.rs  mod.rs  wda.rs  wda_manager.rs
test_app/: README.md
test_app/android/app/: build.gradle.kts
test_app/ios/Runner.xcodeproj/: project.pbxproj
test_app/lib/: main.dart
test_app/linux/: CMakeLists.txt
test_app/macos/Runner.xcodeproj/: project.pbxproj
test_app/windows/runner/: Runner.rc
test_app_android/: .gitignore  gradlew  settings.gradle.kts
test_app_android/app-compose/: build.gradle.kts
test_app_android/app-view/: build.gradle.kts
test_app_ios/: .gitignore
test_app_ios/MobileUseTest/: ContentView.swift  MobileUseTestApp.swift
test_app_ios/MobileUseTest.xcodeproj/: project.pbxproj
(+32 files in other folders)
