[package]
name = "mobile-use"
version = "0.2.1"
edition = "2021"
description = "Mobile UI automation CLI — inspect, interact with, and automate mobile app interfaces"
license = "MIT"
repository = "https://github.com/liuqijun/mobile-use"
homepage = "https://github.com/liuqijun/mobile-use"
readme = "README.md"
keywords = ["mobile", "ui-automation", "ai", "flutter", "android"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
url = "2.5"
base64 = "0.21"
image = "0.24"
dirs = "5.0"
regex = "1.10"
reqwest = { version = "0.11", features = ["blocking", "json"] }

[dev-dependencies]
tempfile = "3.9"

[[bin]]
name = "mobile-use"
path = "src/main.rs"
